Add database layer