@@ -2,6 +2,7 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
@@ -10,8 +11,6 @@ import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,7 +19,9 @@ public class UserService {
     private final UserStorage userStorage;
 
     @Autowired
-    public UserService(UserStorage userStorage) {
+    public UserService(
+            @Qualifier("userDbStorage") UserStorage userStorage) {
+
         this.userStorage = userStorage;
     }
 
@@ -46,54 +47,50 @@ public class UserService {
     public void addFriend(int userId, int friendId) {
         validateDifferentUsers(userId, friendId);
 
-        User user = getUserOrThrow(userId);
-        User friend = getUserOrThrow(friendId);
+        getUserOrThrow(userId);
+        getUserOrThrow(friendId);
 
-        user.getFriends().add(friend.getId());
-        friend.getFriends().add(user.getId());
+        userStorage.addFriend(userId, friendId);
 
-        userStorage.update(user);
-        userStorage.update(friend);
-
-        log.info("Пользователь {} добавил пользователя {} в друзья", userId, friendId);
+        log.info(
+                "Пользователь {} добавил пользователя {} в друзья",
+                userId,
+                friendId
+        );
     }
 
     public void removeFriend(int userId, int friendId) {
         validateDifferentUsers(userId, friendId);
 
-        User user = getUserOrThrow(userId);
-        User friend = getUserOrThrow(friendId);
+        getUserOrThrow(userId);
+        getUserOrThrow(friendId);
 
-        user.getFriends().remove(friendId);
-        friend.getFriends().remove(userId);
+        userStorage.removeFriend(userId, friendId);
 
-        userStorage.update(user);
-        userStorage.update(friend);
-
-        log.info("Пользователь {} удалил пользователя {} из друзей", userId, friendId);
+        log.info(
+                "Пользователь {} удалил пользователя {} из друзей",
+                userId,
+                friendId
+        );
     }
 
     public List<User> getFriends(int userId) {
-        User user = getUserOrThrow(userId);
+        getUserOrThrow(userId);
 
-        return user.getFriends().stream()
+        return userStorage.getFriends(userId).stream()
                 .map(this::getUserOrThrow)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<User> getCommonFriends(int userId, int otherId) {
         validateDifferentUsers(userId, otherId);
 
-        User user = getUserOrThrow(userId);
-        User otherUser = getUserOrThrow(otherId);
+        getUserOrThrow(userId);
+        getUserOrThrow(otherId);
 
-        Set<Integer> commonFriendIds = user.getFriends().stream()
-                .filter(otherUser.getFriends()::contains)
-                .collect(Collectors.toSet());
-
-        return commonFriendIds.stream()
+        return userStorage.getCommonFriends(userId, otherId).stream()
                 .map(this::getUserOrThrow)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private User getUserOrThrow(int userId) {
